--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 numpy>=1.18.0
-torch==1.3.1+cpu
-torchvision==0.4.2+cpu
+torch==1.3.1
+torchvision==0.4.2
 gym==0.15.4
 matplotlib==3.1.2
 pandas==0.25.3
 scikit-learn==0.22.1
+
+
