--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ torch==1.3.1
 torchvision==0.4.2
 gym==0.15.4
 matplotlib==3.1.2
-pandas==0.25.3
+pandas>=0.25.3
 scikit-learn==0.22.1
 Pillow==6.2.2
 
